--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@types/react-helmet": "^6.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -61,6 +62,5 @@
     ]
   },
   "devDependencies": {
-    "@types/react-helmet": "^6.1.11"
   }
 }
