--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
+    "vercel": "^41.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy:prod": "npm run build && vercel deploy --prod"
   },
   "eslintConfig": {
     "extends": [
