--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-helmet": "^6.1.11",
     "@types/react-slick": "^0.23.13",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.0.12",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.2.13",
